tests/cases/positive/graded-unit.frtl
x : Float(1) = 1.0   
y : Float(1) = x + 2.0 
z : Float(1) = x * y + y
a : Float(1) = z / y
it = a