tests/cases/negative/units-unitless.frtl
x : Float(Unit(M)) = 1.0 + 2.0
y : Float(Unit(1)) = x * 4.0
z : Float = y - x